# ringkit

./: .gitignore  CLAUDE.md  README.md  __init__.py  data.py  device.py  nn.py  rlearn.py  rmath.py
array/: __init__.py  numpy.py  tensor.py
bench/: apples_to_apples.py
collections/: __init__.py
core/: __init__.py  calculus.py  constants.py  native.py
docs/: BENCHMARKS.md  CHARTER.md  CONSUMING-RINGKIT.md  ECOSYSTEM.md  HANDOVER-GEMMA-EMULATION.md  HANDOVER-GEMMA4-PRECISION.md  HANDOVER-QUANTA-MPRC.md  MANIFEST.md  REPORT-GEMMA2.md  REPORT-GEMMA4.md  SRD.md
emulation/: __init__.py  checkpoint.py  gemma.py  gemma4.py  gemma4_weights.py  gemma_weights.py  infer.py  onix.py  ract.py  tokenizer.py
kernels/: backend.py  cache_manifold.c  gauge.c  qcm_kernel.c  ring_ops.c
kernels/residency/: Cargo.toml  host.py
kernels/residency/src/: lib.rs
kernels/rust/: Cargo.toml
kernels/rust/src/: lib.rs
linalg/: __init__.py  fit.py  solve.py
ml/: __init__.py  adicodec.py  attention.py  autograd.py  gevhv.py  grad.py  kvadi.py  kvcache.py  kvcodec.py  kvpolar.py  loss.py  nn.py  optim.py  tensor_autograd.py  tkvcache.py  train_kernel.py  train_smoke.py
nn/: __init__.py  layers.py  transformer.py
physics/: __init__.py  gauge.py  measure.py  qcm.py  sim.py
qcm/: __init__.py  activations.py  attention.py  constants.py  frontend.py  models.py  rope.py  ssd.py  tensor.py
quanta/: __init__.py  _ringtrig.py  frontend.py  layers.py  models.py  ssd.py
rcollections/: __init__.py
rnp/: __init__.py  tensor.py
stats/: stats.py
tests/: run_all.py  test_adicodec.py  test_attention.py  test_calculus.py  test_checkpoint.py  test_constants.py  test_data_facade.py  test_gauge.py  test_gemm.py  test_gemma2.py  test_gemma4.py  test_gevhv.py  test_gevhv_cuda.py  test_gevhv_rust.py  test_grad.py  test_infer.py  test_infer_block.py  test_kernels.py  test_kvadi.py  test_kvcache.py  test_kvcodec.py  test_kvpolar.py  test_linalg.py  test_metal.py  test_ml.py  test_native.py  test_nn_facade.py  test_numpy.py  test_onix.py  (+15 more)
(+43 files in other folders)
